# UR3e_RG2_ER5

UR3e_RG2_ER5_description/: CMakeLists.txt  package.xml
UR3e_RG2_ER5_description/launch/: gazebo.launch  ur3e_bringup.launch  ur3e_upload.launch
UR3e_RG2_ER5_description/urdf/: er5.urdf.xacro  rg2.urdf.xacro  ur3e_with_rg2.urdf.xacro
UR3e_RG2_ER5_description/worlds/: full_robot.world
UR3e_RG2_ER5_gripper_control/: CMakeLists.txt  package.xml
UR3e_RG2_ER5_gripper_control/script/: RG2Grip_Command.py  command_gripper.py
UR3e_RG2_ER5_gripper_control/src/: RG2Grip.py  gripper_controller.py
UR3e_RG2_ER5_gripper_gazebo/: CMakeLists.txt  package.xml
UR3e_RG2_ER5_moveit_config/: CMakeLists.txt  package.xml
UR3e_RG2_ER5_moveit_config/config/: controllers.yaml  kinematics.yaml  ur3e_with_rg2.srdf
UR3e_RG2_ER5_moveit_config/launch/: UR3e_RG2_ER5_moveit_controller_manager.launch.xml  UR3e_RG2_ER5_moveit_planning_execution.launch  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
UR3e_RG2_ER5_moveit_config/tests/: moveit_planning_execution.xml
UR3e_RG2_ER5_pick_place/: CMakeLists.txt  package.xml
UR3e_RG2_ER5_pick_place/launch/: pick_place_objects.launch
UR3e_RG2_ER5_pick_place/src/: full_robot_pick_place.cpp
UR3e_RG2_ER5_pick_place/urdf/: object.urdf.xacro  table1.urdf.xacro  table2.urdf.xacro
UR3e_RG2_ER5_vision/: calibration_camera.py  camera_test.py  kinect_test.py  kinect_test2.py  v1_feature_extrac.py
